# interact_with_aurora

AuroraData/: AuroraData1.py  AuroraData2.py
Moverio/: .gitignore  build.gradle  settings.gradle
Moverio/moverio_ros/: build.gradle
Moverio/moverio_ros/src/main/: AndroidManifest.xml
Moverio/moverio_ros/src/main/java/org/lcsr/moverio/moverio_ros/: MainActivity.java  SensorPublisher.java
Moverio/moverio_ros/src/main/res/layout/: main.xml
Moverio/moverio_ros/src/main/res/values/: strings.xml
ROSNode/: CMakeLists.txt  package.xml
ROSNode/launch/: calibrate.launch  nasa.launch
ROSNode/script/: cam_info_updator.py  controller.py
ROSNode/src/: ArucoDetector.cpp  ArucoDetector.h  convertCoord.cpp  convertCoord.h  convertCoord_node.cpp
Registration/: CMakeLists.txt  convertCoord.cpp  convertCoord.h  main.cpp
